# internal/api/dto/genre.go
@@ -1,1 +1,6 @@
 package dto
+
+type GenreResponse struct {
+	Id   string `json:"id"`
+	Name string `json:"name"`
+}
